# ScrapLogGit2Net

./: JISA2015specificAnalysis.py  README.MD  README.md  TODO.txt  compare-set-nofi-GraphML.py  compare-two-nofi-GraphML-metrics.py  compare-two-nofi-GraphML.py  compareGraphMLNetworks.py  datamodels.py  deanonymize_github_users.py  dependencies.sh  exportGraphMLformat.py  exportGraphml.py  exportLogData.py  export_graphml_format.py  export_log_data.py  extract_temporal_network.py  extract_unweighted_network.py  extract_weighted_LOC_temporal_network.py  extract_weighted_network.py  formatAndReport-nofi-GraphML.py  formatAndReportGraphML.py  formatAndViz-nofi-GraphML.py  formatAndViz-nofo-GraphML.py  formatAndVizGraphML.py  formatFilterAndReport-nofi-GraphML.py  formatFilterAndReport-nofo-GraphML.py  formatFilterAndViz-nofi-GraphML.py  formatFilterAndViz-nofo-GraphML.py  formatGraphml.py  gitHubAnonymyzedEmail.py  lessons-learned.txt  networkMeasures.py  nofi_graphml_network_visualizer.py  nofo_graphml_network_visualizer.py  pyproject.toml  requirements.txt  scrapLog.py  scrap_repo_repositories_logs.py  setup.py  (+6 more)
core/: models.py  types.py
docs/: CONTRIBUTING.md  formatAndViz-nofi-GraphML-documentation.md  scrapLog-documentation.md
governance/: dev_journal.md
paper-specific-analysis/: JISA2015specificAnalysis.py  Readme.md
project-specific-analysis/: Readme.md
repo_bash_scripts/: compileAllLogs.sh  compileAllLogs_filter_time_window.sh  compile_all_git_logs_across_branches.sh  compile_all_git_logs_across_branches.sh~  filter_pretty_commit_log_by_time_window.sh  (+3 more)
(+326 files in other folders)
